fixed cart delivery alignment

--- a/src/app/client/cart/cart.component.scss
+++ b/src/app/client/cart/cart.component.scss
@@ -1,13 +1,13 @@
-
 .cart-main {
+    margin: 25px;
     display: flex;
     background-color: #fff;
+    justify-content: space-between;
 }
 
 .cart-items {
-    margin-top: 30px;
-    margin-left: 40px;
-    width: 60%;
+    margin-left: 4%;
+    width: 58%;
     height: auto;
     border-radius: 16px;
     border: 1px solid rgb(225, 225, 225);
@@ -33,146 +33,10 @@ hr {
     border-top: 2px solid var(--color-secondary);
 }
 
-.cart-price {
-    margin-top: 30px;
-    margin-left: 50px;
-    padding: 25px;
-    width: 27%;
-    border-radius: 16px;
-    border: 1px solid rgb(225, 225, 225);
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.15);
-
-    &:hover {
-        border: 2px solid var(--color-primary);
-        transform: scale(1.02);
-        transition: 0.5s;
-        box-shadow: 0 0 20px rgba(246, 174, 220, 0.608);
-    }
-}
-
-.cart-price h1 {
-    margin-top: 20px;
-    font-size: var(--small);
-    font-weight: 500;
-}
-
-.cart-price p {
-    margin-top: 4px;
-    margin-bottom: 20px;
-    color: grey;
-    font-size: 12px;
-    font-weight: 600;
-}
-
-hr.new2 {
-    border-top: 1px dashed grey;
-    width: 87%;
-}
-
-.promo {
-    display: flex;
-    margin-top: 20px;
-    height: auto;
-    background-color: white;
-    border-radius: 8px;
-    width: 80%;
-    border: 1px solid rgb(217, 217, 217);
-    overflow: hidden;
-}
-
-.promo input {
-    padding-left: 5px;
-    border: none;
-    background-color: rgb(213, 213, 213);
-    padding: 10px;
-    width: 68%;
-    font-size: var(--xsmall);
-    font-family: var(--font);
-}
-
-.promo button{
-        border: 1px solid #969696;
-        margin: 3px;
-        width: 30%;
-
-
-        
-        padding: 0px;
-        font-size: var(--xxsmall);
-        padding: 0px 15px;
-        cursor: pointer;
-        border-radius: 3px;
-        transition: 0.5s;
-        outline: none !important;
-        &:active{
-            background-color: grey;
-            color: #ffffff;
-        }
-}
-#back{
-    i{
+#back {
+    i {
         margin-right: 10px;
     }
-}
-#disc{
-    font-size: var(--xsmall);
-}
-
-.price-detail {
-    display: flex;
-}
-
-.price-detail h1 {
-    font-size: var(--xsmall);
-}
-
-.price-detail p {
-    font-size: var(--xsmall);
-    margin-top: 10px;
-    margin-bottom: -5px;
-    font-weight: 500;
-}
-
-.price-detail-data {
-    margin-left: 44%;
-    text-align: right;
-}
-
-.pd {
-    color: grey;
-}
-
-.total-price {
-    display: flex;
-}
-
-.total-price p {
-    font-size: var(--small);
-    color: black;
-    font-weight: 600;
-}
-
-#price-final {
-    margin-left: 51%;
-    text-align: right;
-}
-
-.proceed-btn {
-    background-color: var(--color-secondary);
-    color: #ffffff;
-    border: none;
-    width: 80%;
-    border-radius: 8px;
-    margin-top: 15px;
-    margin-bottom: 8px;
-    padding: 5px;
-    font-size: large;
-    font-weight: 450;
-}
-
-.proceed-btn:hover,
-.promo button:hover {
-    cursor: pointer;
 }
 
 a {
@@ -182,16 +46,102 @@ a {
     text-decoration: none;
     font-size: 15px;
 }
-@media only screen and (max-width: 600px){
-    .cart-main{
+
+.cart-price {
+    width: 30%;
+    padding: 15px;
+    padding-top: 30px;
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    font-family: var(--font-one);
+    box-shadow: 1px 1px 9px rgba(0, 0, 0, 0.25);
+    border-radius: 20px;
+
+    #heading {
+        font-weight: 500;
+        font-size: var(--medium);
+        margin-bottom: 25px;
+    }
+
+    #date {
+        text-align: left;
+        line-height: 05px;
+    }
+
+    #hr {
+        color: #969696;
+        width: 100%;
+        border: 1px dashed #969696;
+        margin-bottom: 15px;
+    }
+
+    #discount {
+        text-align: left;
+        font-size: var(--small);
+        font-weight: 500;
+    }
+
+    .promo-code {
+        display: flex;
+        align-items: center;
+        input {
+            border: none;
+            background-color: #d6d6d6;
+            color: #636363;
+            padding: 8px;
+            border-radius: 5px;
+        }
+        button{
+            border: none;
+            padding: 8px;
+            border-radius: 5px;
+            margin-left: -2px;
+            background-color: #fff;
+            box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.25);
+            color: #636363;
+            transition: .5s;
+            &:active{
+                box-shadow: none;
+            }
+        }
+    }
+    .bill{
+        width: 90%;
+        padding: 25px;
+        .uk-flex{
+            margin-top: 10px;
+            justify-content: space-between;
+            align-items: center;
+            font-weight: 450;
+            font-size: var(--xsmall);
+        }
+        .subtotal{
+            font-size: var(--small);
+        }
+        .primary-button{
+            display: block;
+            width: 100%;
+            font-size: var(--xsmall);
+            margin-top: 25px;
+            border-radius: 5px;
+            font-weight: 500;
+        }
+    }
+}
+
+@media only screen and (max-width: 600px) {
+    .cart-main {
         flex-direction: column;
         width: auto;
     }
-    .cart-items{
+
+    .cart-items {
         margin: 0;
         width: auto;
     }
-    .cart-price{
+
+    .cart-price {
         width: auto;
         display: block;
         margin: auto;
@@ -200,40 +150,27 @@ a {
         margin: 10px;
         align-items: center;
         padding: 15px;
-        .parent-container{
+
+        .parent-container {
             display: inline-block;
             margin: auto;
             text-align: center;
+            padding: 15px;
         }
     }
-    .promo{
-        input{
+
+    .promo {
+        input {
             width: 100%;
             margin-bottom: 5px;
         }
-        button{
+
+        button {
             border: 1px solid #969696;
             margin: 3px;
             padding: 2px 15px;
             cursor: pointer;
             border-radius: 3px;
         }
-    }
-}
-button{
-    border:none !important;
-    outline: none;
-    background-color: rgb(240, 240, 240);
-    padding:10px;
-    height:50px;
-    font-size: 17px;
-    font-weight: 600;
-    color:rgb(56, 56, 56);
-    margin-right: 20px;
-    border-radius: 10px;
-    transition: all 0.5s ease-in-out;
-    &:hover{
-        background: var(--color-secondary);
-        color:white;
     }
 }
